--- a/index.html
+++ b/index.html
@@ -74,6 +74,75 @@
         </div>
       </div>
     </div>
+    <div class="container my-5" id="details">
+      <div class="row d-grip gap-5 d-flex justify-content-center">
+        <div
+          class="
+            details-item
+            col-md-3
+            d-flex
+            justify-content-center
+            align-items-center
+            flex-column
+          "
+        >
+          <img src="Resource/ICON/book.png" alt="book" />
+          <div>
+            <h5>1500+ Topic</h5>
+            <p>Learn Anything</p>
+          </div>
+        </div>
+        <div
+          class="
+            details-item
+            col-md-3
+            d-flex
+            justify-content-center
+            align-items-center
+            flex-column
+          "
+        >
+          <img src="Resource/ICON/Student.png" alt="Student" />
+          <div>
+            <h5>1800+ Students</h5>
+            <p>Learn Anything</p>
+          </div>
+        </div>
+        <div
+          class="
+            details-item
+            col-md-3
+            d-flex
+            justify-content-center
+            align-items-center
+            flex-column
+          "
+        >
+          <img src="Resource/ICON/Test.png" alt="Test" />
+          <div>
+            <h5>9K+ Test Token</h5>
+            <p>Learn Anything</p>
+          </div>
+        </div>
+        <div
+          class="
+            details-item
+            col-md-3
+            d-flex
+            justify-content-center
+            align-items-center
+            flex-column
+          "
+        >
+          <img src="Resource/ICON/Students.png" alt="Students" />
+          <div>
+            <h5>2000+ Student</h5>
+            <p>Learn Anything</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- JavaScript Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
