--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           "
         >
           <img src="Resource/ICON/book.png" alt="book" />
-          <div>
+          <div class="text-center">
             <h5>1500+ Topic</h5>
             <p>Learn Anything</p>
           </div>
@@ -103,7 +103,7 @@
           "
         >
           <img src="Resource/ICON/Student.png" alt="Student" />
-          <div>
+          <div class="text-center">
             <h5>1800+ Students</h5>
             <p>Learn Anything</p>
           </div>
@@ -119,7 +119,7 @@
           "
         >
           <img src="Resource/ICON/Test.png" alt="Test" />
-          <div>
+          <div class="text-center">
             <h5>9K+ Test Token</h5>
             <p>Learn Anything</p>
           </div>
@@ -135,7 +135,7 @@
           "
         >
           <img src="Resource/ICON/Students.png" alt="Students" />
-          <div>
+          <div class="text-center">
             <h5>2000+ Student</h5>
             <p>Learn Anything</p>
           </div>
