--- a/index.html
+++ b/index.html
@@ -142,7 +142,74 @@
         </div>
       </div>
     </div>
-
+    <div class="container pt-4" id="courses">
+      <h2 class="text-center">Online Courses</h2>
+      <div class="card-group my-5">
+        <div class="card p-2 mx-3">
+          <img
+            src="Resource/Photos/Morder pyschology.png"
+            class="card-img-top"
+            alt="pyschology"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text" style="color: #585859">Designation</p>
+            <button class="btn btn-success">Buy Course</button>
+            <div class="row card-text text-muted pt-4 pb-2">
+              <div class="col-md-8">
+                <img src="Resource/ICON/calendar.png" alt="calender" />Started
+                20 April,2021
+              </div>
+              <div class="col-md-4">
+                <img src="Resource/ICON/people.png" alt="people" /> 60 Seats
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card p-2 mx-3">
+          <img
+            src="Resource/Photos/Morder psyc.png"
+            class="card-img-top"
+            alt="psyc"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text" style="color: #585859">Designation</p>
+            <button class="btn btn-success">Buy Course</button>
+            <div class="row card-text text-muted pt-4 pb-2">
+              <div class="col-md-8">
+                <img src="Resource/ICON/calendar.png" alt="calender" />Started
+                20 April,2021
+              </div>
+              <div class="col-md-4">
+                <img src="Resource/ICON/people.png" alt="people" /> 60 Seats
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card p-2 mx-3">
+          <img
+            src="Resource/Photos/Morder pychons.png"
+            class="card-img-top"
+            alt="pychons"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text" style="color: #585859">Designation</p>
+            <button class="btn btn-success">Buy Course</button>
+            <div class="row card-text text-muted pt-4 pb-2">
+              <div class="col-md-8">
+                <img src="Resource/ICON/calendar.png" alt="calender" />Started
+                20 April,2021
+              </div>
+              <div class="col-md-4">
+                <img src="Resource/ICON/people.png" alt="people" /> 60 Seats
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- JavaScript Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
