--- a/index.html
+++ b/index.html
@@ -210,6 +210,71 @@
         </div>
       </div>
     </div>
+    <div class="container py-5" id="about">
+      <h2 class="text-center">Testimonial</h2>
+      <div
+        class="
+          bio
+          d-flex
+          flex-row
+          justify-content-center
+          align-items-center
+          flex-wrap
+        "
+      >
+        <img src="Resource/Photos/Man.png" alt="Man" />
+        <p class="ps-5 py-5 pe-2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+          corrupti blanditiis qui nihil quos, sit officiis fuga, consectetur
+          asperiores perspiciatis earum!
+        </p>
+      </div>
+    </div>
+    <footer id="footer" class="pt-5 px-5">
+      <div class="d-flex flex-row justify-content-between flex-wrap">
+        <div class="starting-footer">
+          <p>
+            Millions of people of all ages and from around the world are
+            improving their lives with us
+          </p>
+        </div>
+        <div>
+          <h5>Course</h5>
+          <ul>
+            <li>Graphics Design</li>
+            <li>Web Design</li>
+            <li>Digital Marketing</li>
+            <li>Web Developement</li>
+            <li>Software Developement</li>
+          </ul>
+        </div>
+        <div>
+          <h5>Terms</h5>
+          <ul>
+            <li>Graphics Design</li>
+            <li>Web Design</li>
+            <li>Digital Marketing</li>
+            <li>Web Developement</li>
+            <li>Software Developement</li>
+          </ul>
+        </div>
+        <div>
+          <h5>Useful Links</h5>
+          <ul>
+            <li>Graphics Design</li>
+            <li>Web Design</li>
+            <li>Digital Marketing</li>
+            <li>Web Developement</li>
+            <li>Software Developement</li>
+          </ul>
+        </div>
+      </div>
+      <div id="copyright">
+        <p class="text-center mt-5 pb-3">
+          Copyright &copy; reserved by Saeed Hossain Moheb
+        </p>
+      </div>
+    </footer>
     <!-- JavaScript Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
