final update without text modify

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         "
       >
         <img src="Resource/Photos/Man.png" alt="Man" />
-        <p class="ps-5 py-5 pe-2">
+        <p class="ps-4 pt-2 pe-2">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
           corrupti blanditiis qui nihil quos, sit officiis fuga, consectetur
           asperiores perspiciatis earum!
